Added paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Eleven</h1>
         <p>You lie! You are like papa!</p>
+        <p>friends don't lie</p>
     </body>
 </html>
