Added me.jpg pic

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Eleven</h1>
         <p>You lie! You are like papa!</p>
         <img src="Gaming_5000x3125.jpg" alt ="youwin">
+        <img src="me.jpg" alt="youlie">
     </body>
 </html>
